fixed pre element overlap issue in Firefox

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -110,6 +110,7 @@ pre {
   word-wrap: break-word;
   -ms-word-wrap: break-word;
   word-break: break-all;
+  white-space: pre-wrap;
   padding: $baseline-height / 2;
   background: #f5f5f5;
 }
